# QTQML-PinCode-App

./: CMakeLists.txt  FileReader.cpp  FileReader.h  Main.qml  Welcome.qml  main.cpp  passcodevalidator.cpp  passcodevalidator.h  videohandler.cpp  videohandler.h
